[package]
name = "mueue"
version = "0.1.0"
edition = "2021"
description = "A simple implementation of message queues"
authors = ["Alexander Vedekhin"]
repository = "https://github.com/alexanderved/mqueue"
keywords = ["message", "messaging", "message_queue"]
license = "MPL-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
